Sun Feb 24 10:12:45 2007 Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gnubg.c, play.c, multithreaded.c, others: Fix multi-threaded progress indicator.

Wed Feb 20 23:52:48 CET 2008 Christian Anthon <anthon@kiku.dk>

	* relational.c: fix bug caused by APPENDI and APPENDF not being
	properly {}'ed.
	* dbprovider.h, relational.c: fix minor compiler warnings.
	* dbprovider.c: add input string to SQL warnings.

Wed Feb 20 23:50:02 CET 2008 Christian Anthon <anthon@kiku.dk>

	* gtkgame.c: update GTKOutput to use a g_string instead of a list.

Sun Feb 17 13:19:58 CET 2008 Christian Anthon <anthon@kiku.dk>

	* bearoff.c, dbprovider.c, dbprovider.h, gnubg.sql, gnubgmodule.c,
	gtkrelational.c, gtkrelational.h, relational.c: more relational db
	changes and a few minor compiler warnings. Added new item to matchstat
	and gamestat.

Fri Feb 15 16:59:43 CET 2008 Christian Anthon <anthon@kiku.dk>

	* drawboard.c: revert to Jan 19 after accidental checkin (fix board
	after uint changes)

Fri Feb 15 13:03:31 CET 2008 Christian Anthon <anthon@kiku.dk>

	* .cvsignore, backgammon.h, gtkoptions.c, makebearoff.c, play.c,
	util.h, board3d/Makefile.am, po/POTFILES.in: minor cleanups and
	compiler warnings

Sun Feb 10 23:21:33 CET 2008 Christian Anthon <anthon@kiku.dk>

	* backgammon.h, export.c, export.h, file.c, gnubg.c, html.c, play.c,
	simpleboard.c, text.c: allow cairo ps and pdf to export games and
	matches

Sun Feb 10 11:12:45 2007 Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkoptions.c: Move database settings to options dialog.

Sat Feb  9 23:12:45 2007 Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkrelational.c: Put simple stats into relational dialog

Sat Feb  9 14:12:45 2007 Jon Kinsey <Jon_Kinsey@hotmail.com>

	* dbprovider.c, relational.c: Added game stats to database

Fri Feb  8 23:11:13 CET 2008 Christian Anthon <anthon@kiku.dk>

	* Makefile.am, dbprovider.c, relational.h: allow code to compile
	without python and fix a couple of minor warnings
