@@ -16,7 +16,7 @@
  * along with this program; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  *
- * $Id: backgammon.h,v 1.368 2008/02/15 12:04:35 c_anthon Exp $
+ * $Id: backgammon.h,v 1.369 2008/02/24 10:39:40 Superfly_Jon Exp $
  */
 
 #ifndef _BACKGAMMON_H_
@@ -577,18 +577,15 @@ extern void CommandAnnotateCube(char *);
 extern void CommandAnnotateDouble(char *);
 extern void CommandAnnotateDoubtful(char *);
 extern void CommandAnnotateDrop(char *);
-extern void CommandAnnotateGood(char *);
-extern void CommandAnnotateInteresting(char *);
 extern void CommandAnnotateLucky(char *);
 extern void CommandAnnotateMove(char *);
 extern void CommandAnnotateReject(char *);
 extern void CommandAnnotateResign(char *);
 extern void CommandAnnotateUnlucky(char *);
 extern void CommandAnnotateVeryBad(char *);
-extern void CommandAnnotateVeryGood(char *);
 extern void CommandAnnotateVeryLucky(char *);
 extern void CommandAnnotateVeryUnlucky(char *);
-extern void CommandCalibrate(char *sz);
+extern void CommandCalibrate(char *);
 extern void CommandClearHint(char *);
 extern void CommandCopy(char *);
 extern void CommandDecline(char *);
@@ -609,19 +606,16 @@ extern void CommandExportMatchLaTeX(char *);
 extern void CommandExportMatchMat(char *);
 extern void CommandExportMatchPDF(char *);
 extern void CommandExportMatchPS(char *);
-extern void CommandExportMatchSGG(char *);
 extern void CommandExportMatchText(char *);
-extern void CommandExportMatchTMG(char *);
-extern void CommandExportPositionEPS(char *);
 extern void CommandExportPositionGammOnLine(char *);
 extern void CommandExportPositionGOL2Clipboard(char *);
 extern void CommandExportPositionHtml(char *);
 extern void CommandExportPositionJF(char *);
-extern void CommandExportPositionPDF(char *sz);
+extern void CommandExportPositionPDF(char *);
 extern void CommandExportPositionPNG(char *);
-extern void CommandExportPositionPS(char *sz);
+extern void CommandExportPositionPS(char *);
 extern void CommandExportPositionSnowieTxt(char *);
-extern void CommandExportPositionSVG(char *sz);
+extern void CommandExportPositionSVG(char *);
 extern void CommandExportPositionText(char *);
 extern void CommandExternal(char *);
 extern void CommandFirstGame(char *);
@@ -643,13 +637,15 @@ extern void CommandImportTMG(char *);
 extern void CommandListGame(char *);
 extern void CommandListMatch(char *);
 extern void CommandLoadCommands(char *);
+extern void CommandLoadGame(char *);
+extern void CommandLoadMatch(char *);
+extern void CommandLoadPosition(char *);
 extern void CommandLoadPython(char *);
 extern void CommandMove(char *);
 extern void CommandMWC2Eq(char *);
 extern void CommandNewGame(char *);
 extern void CommandNewMatch(char *);
 extern void CommandNewSession(char *);
-extern void CommandNewWeights(char *);
 extern void CommandNext(char *);
 extern void CommandNotImplemented(char *);
 extern void CommandPlay(char *);
@@ -674,6 +670,10 @@ extern void CommandRelationalTest(char *);
 extern void CommandResign(char *);
 extern void CommandRoll(char *);
 extern void CommandRollout(char *);
+extern void CommandSaveGame(char *);
+extern void CommandSaveMatch(char *);
+extern void CommandSavePosition(char *);
+extern void CommandSaveSettings(char *);
 extern void CommandSetAnalysisChequerplay(char *);
 extern void CommandSetAnalysisCube(char *);
 extern void CommandSetAnalysisCubedecision(char *);
@@ -686,18 +686,14 @@ extern void CommandSetAnalysisPlayerAnalyse(char *);
 extern void CommandSetAnalysisPlayer(char *);
 extern void CommandSetAnalysisThresholdBad(char *);
 extern void CommandSetAnalysisThresholdDoubtful(char *);
-extern void CommandSetAnalysisThresholdGood(char *);
-extern void CommandSetAnalysisThresholdInteresting(char *);
 extern void CommandSetAnalysisThresholdLucky(char *);
 extern void CommandSetAnalysisThresholdUnlucky(char *);
 extern void CommandSetAnalysisThresholdVeryBad(char *);
-extern void CommandSetAnalysisThresholdVeryGood(char *);
 extern void CommandSetAnalysisThresholdVeryLucky(char *);
 extern void CommandSetAnalysisThresholdVeryUnlucky(char *);
 extern void CommandSetAnalysisWindows(char *);
 extern void CommandSetAnnotation(char *);
 extern void CommandSetAppearance(char *);
-extern void CommandSetAutoAnalysis(char *);
 extern void CommandSetAutoBearoff(char *);
 extern void CommandSetAutoCrawford(char *);
 extern void CommandSetAutoDoubles(char *);
@@ -733,37 +729,28 @@ extern void CommandSetDice(char *);
 extern void CommandSetDisplay(char *);
 extern void CommandSetDisplayPanels(char *);
 extern void CommandSetDockPanels(char *);
-extern void CommandSetEgyptian(char *);
-extern void CommandSetEvalCandidates(char *);
 extern void CommandSetEvalChequerplay(char *);
 extern void CommandSetEvalCubedecision(char *);
 extern void CommandSetEvalCubeful(char *);
 extern void CommandSetEvalDeterministic(char *);
 extern void CommandSetEvalMoveFilter(char *);
 extern void CommandSetEvalNoise(char *);
-extern void CommandSetEvalNoOnePlyPrune(char *);
 extern void CommandSetEvalParamEvaluation(char *);
 extern void CommandSetEvalParamRollout(char *);
 extern void CommandSetEvalParamType(char *);
 extern void CommandSetEvalPlies(char *);
 extern void CommandSetEvalPrune(char *);
 extern void CommandSetEvalReduced(char *);
-extern void CommandSetEvalTolerance(char *);
-extern void CommandSetEvaluation(char *);
 extern void CommandSetExportCubeDisplayActual(char *);
 extern void CommandSetExportCubeDisplayBad(char *);
 extern void CommandSetExportCubeDisplayClose(char *);
 extern void CommandSetExportCubeDisplayDoubtful(char *);
-extern void CommandSetExportCubeDisplayGood(char *);
-extern void CommandSetExportCubeDisplayInteresting(char *);
 extern void CommandSetExportCubeDisplayMissed(char *);
 extern void CommandSetExportCubeDisplayUnmarked(char *);
 extern void CommandSetExportCubeDisplayVeryBad(char *);
-extern void CommandSetExportCubeDisplayVeryGood(char *);
 extern void CommandSetExportCubeParameters(char *);
 extern void CommandSetExportCubeProb(char *);
-extern void CommandSetExportFolder(char *sz);
-extern void CommandSetExportFormat(char *sz);
+extern void CommandSetExportFolder(char *);
 extern void CommandSetExportHTMLCSSExternal(char *);
 extern void CommandSetExportHTMLCSSHead(char *);
 extern void CommandSetExportHTMLCSSInline(char *);
@@ -779,11 +766,8 @@ extern void CommandSetExportIncludeMatchInfo(char *);
 extern void CommandSetExportIncludeStatistics(char *);
 extern void CommandSetExportMovesDisplayBad(char *);
 extern void CommandSetExportMovesDisplayDoubtful(char *);
-extern void CommandSetExportMovesDisplayGood(char *);
-extern void CommandSetExportMovesDisplayInteresting(char *);
 extern void CommandSetExportMovesDisplayUnmarked(char *);
 extern void CommandSetExportMovesDisplayVeryBad(char *);
-extern void CommandSetExportMovesDisplayVeryGood(char *);
 extern void CommandSetExportMovesNumber(char *);
 extern void CommandSetExportMovesParameters(char *);
 extern void CommandSetExportMovesProb(char *);
@@ -822,8 +806,7 @@ extern void CommandSetGUIShowIDs(char *);
 extern void CommandSetGUIShowPips(char *);
 extern void CommandSetGUIUseStatsPanel(char *);
 extern void CommandSetGUIWindowPositions(char *);
-extern void CommandSetImportFolder(char *sz);
-extern void CommandSetImportFormat(char *sz);
+extern void CommandSetImportFolder(char *);
 extern void CommandSetInvertMatchEquityTable(char *);
 extern void CommandSetJacoby(char *);
 extern void CommandSetLang(char *);
@@ -838,7 +821,6 @@ extern void CommandSetMatchRating(char *);
 extern void CommandSetMatchRound(char *);
 extern void CommandSetMessage(char *);
 extern void CommandSetMET(char *);
-extern void CommandSetMoveFilter(char *);
 extern void CommandSetOutputDigits(char *);
 extern void CommandSetOutputErrorRateFactor(char *);
 extern void CommandSetOutputMatchPC(char *);
@@ -846,22 +828,6 @@ extern void CommandSetOutputMWC(char *);
 extern void CommandSetOutputRawboard(char *);
 extern void CommandSetOutputWinPC(char *);
 extern void CommandSetPanelWidth(char *);
-extern void CommandSetPathBKG(char *);
-extern void CommandSetPathEPS(char *);
-extern void CommandSetPathGam(char *);
-extern void CommandSetPathHTML(char *);
-extern void CommandSetPathLaTeX(char *);
-extern void CommandSetPathMat(char *);
-extern void CommandSetPathMET(char *);
-extern void CommandSetPathOldMoves(char *);
-extern void CommandSetPathPDF(char *);
-extern void CommandSetPathPNG(char *);
-extern void CommandSetPathPos(char *);
-extern void CommandSetPathSGF(char *);
-extern void CommandSetPathSGG(char *);
-extern void CommandSetPathSnowieTxt(char *);
-extern void CommandSetPathText(char *);
-extern void CommandSetPathTMG(char *);
 extern void CommandSetPlayer(char *);
 extern void CommandSetPlayerChequerplay(char *);
 extern void CommandSetPlayerCubedecision(char *);
@@ -870,8 +836,6 @@ extern void CommandSetPlayerGNU(char *);
 extern void CommandSetPlayerHuman(char *);
 extern void CommandSetPlayerMoveFilter(char *);
 extern void CommandSetPlayerName(char *);
-extern void CommandSetPlayerPlies(char *);
-extern void CommandSetPlayerPubeval(char *);
 extern void CommandSetPostCrawford(char *);
 extern void CommandSetPriorityAboveNormal(char *);
 extern void CommandSetPriorityBelowNormal(char *);
@@ -942,7 +906,7 @@ extern void CommandSetRolloutTruncationPlies(char *);
 extern void CommandSetRolloutVarRedn(char *);
 extern void CommandSetScore(char *);
 extern void CommandSetSeed(char *);
-extern void CommandSetSGFFolder(char *sz);
+extern void CommandSetSGFFolder(char *);
 extern void CommandSetSoundEnable(char *);
 extern void CommandSetSoundSoundAgree(char *);
 extern void CommandSetSoundSoundAnalysisFinished(char *);
@@ -965,22 +929,22 @@ extern void CommandSetSoundSoundTake(char *);
 extern void CommandSetSoundSystemCommand(char *);
 extern void CommandSetStyledGameList(char *);
 extern void CommandSetTheoryWindow(char *);
-extern void CommandSetToolbar(char *);
 extern void CommandSetThreads(char *);
+extern void CommandSetToolbar(char *);
 extern void CommandSetTurn(char *);
 extern void CommandSetTutorChequer(char *);
 extern void CommandSetTutorCube(char *);
-extern void CommandSetTutorEval(char *sz);
+extern void CommandSetTutorEval(char *);
 extern void CommandSetTutorMode(char *);
-extern void CommandSetTutorSkillBad(char *sz);
-extern void CommandSetTutorSkillDoubtful(char *sz);
-extern void CommandSetTutorSkillVeryBad(char *sz);
-extern void CommandSetVariation1ChequerHypergammon(char *sz);
-extern void CommandSetVariation2ChequerHypergammon(char *sz);
-extern void CommandSetVariation3ChequerHypergammon(char *sz);
-extern void CommandSetVariationNackgammon(char *sz);
-extern void CommandSetVariationStandard(char *sz);
-extern void CommandSetVsync3d(char * sz);
+extern void CommandSetTutorSkillBad(char *);
+extern void CommandSetTutorSkillDoubtful(char *);
+extern void CommandSetTutorSkillVeryBad(char *);
+extern void CommandSetVariation1ChequerHypergammon(char *);
+extern void CommandSetVariation2ChequerHypergammon(char *);
+extern void CommandSetVariation3ChequerHypergammon(char *);
+extern void CommandSetVariationNackgammon(char *);
+extern void CommandSetVariationStandard(char *);
+extern void CommandSetVsync3d(char *);
 extern void CommandSetWarning(char *);
 extern void CommandShow8912(char *);
 extern void CommandShowAnalysis(char *);
@@ -1004,10 +968,7 @@ extern void CommandShowCubeEfficiency(char *);
 extern void CommandShowDelay(char *);
 extern void CommandShowDice(char *);
 extern void CommandShowDisplay(char *);
-extern void CommandShowDisplayPanels(char *);
-extern void CommandShowEgyptian(char *);
 extern void CommandShowEngine(char *);
-extern void CommandShowEPC(char *);
 extern void CommandShowEvaluation(char *);
 extern void CommandShowExport(char *);
 extern void CommandShowFullBoard(char *);
@@ -1024,13 +985,10 @@ extern void CommandShowMatchEquityTable(char *);
 extern void CommandShowMatchInfo(char *);
 extern void CommandShowMatchLength(char *);
 extern void CommandShowMatchResult(char *);
-extern void CommandShowOneChequer(char *);
 extern void CommandShowOneSidedRollout(char *);
 extern void CommandShowOutput(char *);
-extern void CommandShowPath(char *);
 extern void CommandShowPipCount(char *);
 extern void CommandShowPlayer(char *);
-extern void CommandShowPostCrawford(char *);
 extern void CommandShowPrompt(char *);
 extern void CommandShowRNG(char *);
 extern void CommandShowRollout(char *);
@@ -1053,6 +1011,7 @@ extern void CommandShowWarning(char *);
 extern void CommandShowWarranty(char *);
 extern void CommandSwapPlayers(char *);
 extern void CommandTake(char *);
+
 extern int getGameNumber(const listOLD * plGame);
 extern int getMoveNumber(const listOLD * plGame, const void *p);
 #endif
